(rule
 (target worker.js)
 (deps ../top_worker/worker.js)
 (action
  (copy %{deps} %{target})))

(rule
 (aliases runtest support-files)
 (target odoc_notebook_crunch.ml)
 (deps worker.js)
 (action
  (setenv
   SOURCE_DATE_EPOCH
   0
   (run ocaml-crunch . -e js -o odoc_notebook_crunch.ml -m plain))))

(library
 (name odoc_notebook_crunch))
