(executable
 (name worker)
 (modes byte)
 (modules worker)
 (link_flags (-linkall))
 (libraries js_top_worker-web))

(rule
 (targets worker.js)
 (deps stubs.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --toplevel
   ; --pretty
   --no-cmis
   --effects=cps
   +toplevel.js
   +dynlink.js
   +bigstringaf/runtime.js
   stubs.js
   %{dep:worker.bc}
   -o
   %{targets})))
